--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "googleapis": "^108.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.7.3",
